--- a/pipelines/incubator/build-push-pl.yaml
+++ b/pipelines/incubator/build-push-pl.yaml
@@ -1,8 +1,8 @@
-#Kabanero! on activate substitute CollectionId for text 'CollectionId'
+#Kabanero! on activate substitute StackId for text 'StackId'
 apiVersion: tekton.dev/v1alpha1
 kind: Pipeline
 metadata:
-  name: CollectionId-build-push-pl
+  name: StackId-build-push-pl
 spec:
   resources:
     - name: git-source
@@ -10,17 +10,17 @@ spec:
     - name: docker-image
       type: image
   tasks:
-    - name: validate-collection-task
+    - name: validate-stack-task
       taskRef:
-        name: CollectionId-validate-collection-task
+        name: StackId-validate-stack-task
       resources:
         inputs:
         - name: git-source
           resource: git-source
     - name: build-push-task
       taskRef:
-        name: CollectionId-build-push-task
-      runAfter: [validate-collection-task]
+        name: StackId-build-push-task
+      runAfter: [validate-stack-task]
       resources:
         inputs:
         - name: git-source
@@ -30,7 +30,7 @@ spec:
           resource: docker-image
     - name: image-scan-task
       taskRef:
-        name: CollectionId-image-scan-task
+        name: StackId-image-scan-task
       runAfter: [build-push-task]
       resources:
         inputs:
