--- a/pipelines/incubator/validate-active-collection-task.yaml
+++ b/pipelines/incubator/validate-active-collection-task.yaml
@@ -54,7 +54,7 @@ spec:
         STACK_VERSIONS=$( oc get stack $STACK_NAME  -o json | jq -r '.status.versions[].version?' ) 
         
         # format example: docker://docker.io/smcclem/java-microprofile:0.1.1
-        TARGET_DIGEST=$( skopeo inspect --tls-verify=false --creds="$IMAGE_REGISTRY_USERNAME":"$IMAGE_REGISTRY_PASSWORD" "docker://$IMAGE_REGISTRY_HOST"/"$PROJECT"/"$STACK_NAME":"$VERSION" | jq '.Digest' )
+        TARGET_DIGEST=$( skopeo inspect --tls-verify=false "docker://$IMAGE_REGISTRY_HOST"/"$PROJECT"/"$STACK_NAME":"$VERSION" | jq '.Digest' )
         
         if [ -z "$TARGET_DIGEST" ]; then
            echo "$APPSODY_CONFIG specifies a stack version of $VERSION , but the image registry does not contain a version tagged with $VERSION, and cannot be built."
@@ -63,7 +63,7 @@ spec:
         
         for STACK_VERSION in ${STACK_VERSIONS}
         do
-           CURRENT_DIGEST=$( skopeo inspect --tls-verify=false --creds="$IMAGE_REGISTRY_USERNAME":"$IMAGE_REGISTRY_PASSWORD" "docker://$IMAGE_REGISTRY_HOST"/"$PROJECT"/"$STACK_NAME":"$STACK_VERSION" | jq '.Digest' )
+           CURRENT_DIGEST=$( skopeo inspect --tls-verify=false "docker://$IMAGE_REGISTRY_HOST"/"$PROJECT"/"$STACK_NAME":"$STACK_VERSION" | jq '.Digest' )
            if [ "$TARGET_DIGEST" =  "$CURRENT_DIGEST" ]; then
               echo "The Kabanero stack contained in $STACK is active on this system and can be built."
               exit 0
