--- a/pipelines/incubator/validate-active-stack-task.yaml
+++ b/pipelines/incubator/validate-active-stack-task.yaml
@@ -42,7 +42,7 @@ spec:
         STACK_NAME="$(echo $PROJECT_STACK | cut -d'/' -f2 )"
         
         # Check to make sure the stack is active by name first
-        oc get stack $STACK_NAME -o json > /dev/null 2>&1
+        kubectl get stack $STACK_NAME -o json > /dev/null 2>&1
         if [ $? -ne 0 ]; then
            echo "$APPSODY_CONFIG specifies stack $STACK_NAME , but no versions of $STACK_NAME are active, and cannot be built."
            exit 1
@@ -51,7 +51,7 @@ spec:
         
         # Get the 3 digit stack values
         # Assumed the version(s) are in the metadata
-        STACK_VERSIONS=$( oc get stack $STACK_NAME  -o json | jq -r '.status.versions[].version?' ) 
+        STACK_VERSIONS=$( kubectl get stack $STACK_NAME  -o json | jq -r '.status.versions[].version?' ) 
         
         # format example: docker://docker.io/smcclem/java-microprofile:0.1.1
         TARGET_DIGEST=$( skopeo inspect --tls-verify=false "docker://$IMAGE_REGISTRY_HOST"/"$PROJECT"/"$STACK_NAME":"$VERSION" | jq '.Digest' )
