--- a/docker/validate-stack/Dockerfile
+++ b/docker/validate-stack/Dockerfile
@@ -8,12 +8,7 @@ RUN echo "gpgcheck=1" >> /etc/yum.repos.d/kubernetes.repo
 RUN echo "repo_gpgcheck=1" >> /etc/yum.repos.d/kubernetes.repo
 RUN echo "gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg" >> /etc/yum.repos.d/kubernetes.repo
 
-RUN useradd build; yum -y update; yum -y reinstall shadow-utils; yum -y install skopeo jq
+RUN useradd build; yum -y update; yum -y reinstall shadow-utils; yum -y install skopeo jq kubectl
 
-# Install kubectl
-RUN yum install -y kubectl
-
-RUN curl -L https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 -o jq \
-  && chmod +x ./jq && cp jq /usr/bin
 
 
