--- a/pipelines/sample-helper-files/pipeline-resources-template.yaml
+++ b/pipelines/sample-helper-files/pipeline-resources-template.yaml
@@ -7,7 +7,7 @@ items:
   spec:
     params:
     - name: url
-      value: index.docker.io/<docker_id>/<docker_image_name>
+      value: docker.io/<docker_id>/<docker_image_name>
     - name: tag
       value: <tag_name>
     type: image
