fix names in helper files

--- a/pipelines/sample-helper-files/image-retag-push-manual-pipeline-run-template.yaml
+++ b/pipelines/sample-helper-files/image-retag-push-manual-pipeline-run-template.yaml
@@ -1,12 +1,12 @@
 apiVersion: tekton.dev/v1alpha1
 kind: PipelineRun
 metadata:
-  name: <collection-name>-image-retag-push-manual-pipeline-run
+  name: <stack-name>-image-retag-push-manual-pipeline-run
 spec:
   serviceAccount: kabanero-operator
   timeout: "1h0m0s"
   pipelineRef:
-    name: <collection-name>-image-retag-push-pipeline
+    name: <stack-name>-image-retag-push-pipeline
   resources:
     - name: docker-src-image
       resourceRef:
