--- a/pipelines/sample-helper-files/image-retag-push-pipeline-resources-template.yaml
+++ b/pipelines/sample-helper-files/image-retag-push-pipeline-resources-template.yaml
@@ -7,7 +7,7 @@ items:
   spec:
     params:
     - name: url
-      value: index.docker.io/<docker_id>/<docker_image_name>:<source_tag_name>
+      value: docker.io/<docker_id>/<docker_image_name>:<source_tag_name>
     type: image
 - apiVersion: tekton.dev/v1alpha1
   kind: PipelineResource
@@ -16,6 +16,6 @@ items:
   spec:
     params:
     - name: url
-      value: index.docker.io/<docker_id>/<docker_image_name>:<dest_tag_name>
+      value: docker.io/<docker_id>/<docker_image_name>:<dest_tag_name>
     type: image
 kind: List
