--- a/pipelines/incubator/deployment-condition.yaml
+++ b/pipelines/incubator/deployment-condition.yaml
@@ -1,7 +1,8 @@
+#Kabanero! on activate substitute StackId for text 'StackId'
 apiVersion: tekton.dev/v1alpha1
 kind: Condition
 metadata:
-  name: deployment-condition
+  name: StackId-deployment-condition
 spec:
   params:
   - name: "event-type"
