--- a/pipelines/incubator/build-push-pl.yaml
+++ b/pipelines/incubator/build-push-pl.yaml
@@ -28,6 +28,8 @@ spec:
         outputs:
         - name: docker-image
           resource: docker-image
+        - name: git-source
+          resource: git-source
     - name: image-scan-task
       taskRef:
         name: StackId-image-scan-task
