--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -8,9 +8,6 @@ spec:
     resources:
     - name: git-source
       type: git
-    params:
-    - name: stack-image-registry-url
-      default: docker.io
   outputs:
     resources:
     - name: docker-image
@@ -66,11 +63,41 @@ spec:
     args:
       - -c
       - |
-        echo "Checking for configmap value....DEFAULT_STACK_IMAGE_REGISTRY_URL=$DEFAULT_STACK_IMAGE_REGISTRY_URL"
-        STACK_IMAGE_REGISTRY_URL=$(inputs.params.stack-image-registry-url)
+        echo "Configmap value for DEFAULT_STACK_IMAGE_REGISTRY_URL=$DEFAULT_STACK_IMAGE_REGISTRY_URL"
+
         if [ -z "$DEFAULT_STACK_IMAGE_REGISTRY_URL" ]
         then
-            echo "DEFAULT_STACK_IMAGE_REGISTRY_URL not configured; using $STACK_IMAGE_REGISTRY_URL for stack image download"
+            echo "DEFAULT_STACK_IMAGE_REGISTRY_URL not configured in a config map.  Look for the stack registry info in the .appsody-cfg file."
+            APPSODY_CONFIG=".appsody-config.yaml"
+            
+            # Default the stack registry to docker.io
+            STACK_IMAGE_REGISTRY_URL="docker.io"
+
+            cd /workspace/$GITSOURCE
+            
+            if [ ! -f "$APPSODY_CONFIG" ]; then
+                echo $APPSODY_CONFIG" is not found in the root of the source directory.
+            else
+                # Find the value for "stack:" from the appsody config file and assign it to the variable 'stack'
+                declare $( awk '{if ($1 ~ "stack:"){printf "STACK="$2}}'  $APPSODY_CONFIG )
+                if [ -z "$STACK" ]; then
+                  echo "$APPSODY_CONFIG does not contain a stack definition."
+                fi
+            fi
+
+            # The stack registry may or may not be in the appsody-cfg.yaml file
+            # If it's there the format should be like registry/project/name:version
+            # It could also just e project/name:version.
+            # Try to determine if the registry is there and if it is, parse it out
+            NUM_SLASHES=awk -F"/" '{print NF-1}' <<< "${STACK}"
+            if [ "$NUM_SLASHES" = 1 ]; then
+                echo "No stack registry specified in APPSODY_CONFIG."
+            elif [ "$NUM_SLASHES" = 2 ]; then
+                STACK_IMAGE_REGISTRY_URL="$(echo $STACK | cut -d'/' -f1)"
+                echo "Stack registry specified in APPSODY_CONFIG as $APP_CFG_REGISTRY.  Using this as the stack registry."
+            else
+                echo "Unexpeted format for stack in APPSODY_CONFIG."
+            fi
         else
             echo "Stack image registry url setup by user is $DEFAULT_STACK_IMAGE_REGISTRY_URL"
             STACK_IMAGE_REGISTRY_URL=$DEFAULT_STACK_IMAGE_REGISTRY_URL
@@ -91,6 +118,9 @@ spec:
              chmod 755 cert-creation.sh
              ./cert-creation.sh
         fi
+
+        echo "Looking for stack registry at $STACK_IMAGE_REGISTRY_URL."
+
         cd /workspace/$gitsource
  
         OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( echo $( /workspace/imageurl_imagename_lowercase.sh ) )
